policies/gatekeeper/templates/k8sdisallowprivileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names: { kind: K8sDisallowPrivileged }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          c.securityContext.privileged == true
          msg := sprintf("Container %v must not run in privileged mode", [c.name])
        }
