policies/gatekeeper/templates/k8sdisallowroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowroot
spec:
  crd:
    spec:
      names: { kind: K8sDisallowRoot }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowroot

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          c.securityContext.runAsUser == 0
          msg := sprintf("Container %v must not run as root (runAsUser=0)", [c.name])
        }

        violation[{"msg": msg}] {
          ps := input.review.object.spec.template.spec
          not ps.securityContext.runAsNonRoot
          c := ps.containers[_]
          not c.securityContext.runAsNonRoot
          msg := sprintf("Container %v must set runAsNonRoot=true", [c.name])
        }
