policies/gatekeeper/templates/k8srequiredresources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names: { kind: K8sRequiredResources }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.limits.cpu
          msg := sprintf("Container %v must declare resources.limits.cpu", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.limits.memory
          msg := sprintf("Container %v must declare resources.limits.memory", [c.name])
        }
